--- a/css/custom.css
+++ b/css/custom.css
@@ -87,3 +87,10 @@ h5 {
     list-style-type: circle;
     padding: 2px;
 }
+
+.card-img-top {
+    width: 100%;
+    height: 13vw;
+    object-fit: cover;
+    border-radius: 3px;
+}
