--- a/css/custom.css
+++ b/css/custom.css
@@ -90,7 +90,7 @@ h5 {
 
 .card-img-top {
     width: 100%;
-    height: 13vw;
+    height: 23vh;
     object-fit: cover;
     border-radius: 3px;
 }
