--- a/css/style.css
+++ b/css/style.css
@@ -135,7 +135,7 @@ banner
     background-color: rgba(12, 184, 182) !important;
 }
 #banner{
-	background: url('../img/bg-banner.jpg') no-repeat fixed;
+	background: url('https://source.unsplash.com/1920x900/?zen,nature,water,forest') no-repeat fixed;
 	background-size: cover;
 	min-height: 650px;
 	position: relative;
