--- a/css/custom.css
+++ b/css/custom.css
@@ -33,13 +33,9 @@
     margin-bottom: 20px;
 }
 
-.card-tiny {
-    width: 34rem !important;
-}
-
 .card {
-    width: 40rem;
-    margin: 20px;
+    width: 35rem;
+    margin: 15px;
     padding: 15px;
     border: 0px;
     border-radius: 5px;
@@ -57,6 +53,11 @@
     -webkit-box-shadow: 0px 0px 33px -1px rgba(0,0,0,0.81);
     -moz-box-shadow: 0px 0px 33px -1px rgba(0,0,0,0.81);
     box-shadow: 0px 0px 33px -1px rgba(0,0,0,0.81);
+}
+
+.card-tiny, .card-pros {
+    width: 36rem !important;
+    margin: 15px;
 }
 
 h5 {
