--- a/css/style.css
+++ b/css/style.css
@@ -136,8 +136,8 @@ banner
 }
 #banner{
     /* https://source.unsplash.com/1920x900/?nature,water,forest,landscape */
-	background: url('../img/bg-banner.jpg') no-repeat fixed top right;
-	background-size: cover;
+	background: url('../img/bg-banner.jpg') no-repeat fixed bottom center;
+    background-size: cover;
 	min-height: 650px;
 	position: relative;
 }
