--- a/css/custom.css
+++ b/css/custom.css
@@ -20,7 +20,7 @@
     }
 
     #banner {
-        background-size: contain;
+        background-size: cover !important;
         background-position: center center;
     }
 }
