--- a/css/style.css
+++ b/css/style.css
@@ -137,7 +137,11 @@ banner
 #banner{
     /* https://source.unsplash.com/1920x900/?nature,water,forest,landscape */
 	background: url('../img/bg-banner.jpg') no-repeat fixed bottom center;
-    background-size: cover;
+    background-attachment:fixed;
+    background-size:cover;
+    -moz-background-size: cover;
+    -webkit-background-size: cover;
+    -o-background-size: cover;
 	min-height: 650px;
 	position: relative;
 }
